--- a/ModuleLearning/sep/osLearning/osLearning.ipynb
+++ b/ModuleLearning/sep/osLearning/osLearning.ipynb
@@ -2,29 +2,96 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "91f8cdba-b90e-4c04-9a5e-785f1a41e5f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'os' has no attribute 'uname'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m os.getcwd() \u001b[38;5;66;03m#获取当前工作路径\u001b[39;00m\n\u001b[32m      3\u001b[39m os.name\u001b[38;5;66;03m#当前操作系统名称\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[43mos\u001b[49m\u001b[43m.\u001b[49m\u001b[43muname\u001b[49m()\n",
+      "\u001b[31mAttributeError\u001b[39m: module 'os' has no attribute 'uname'"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.getcwd() #获取当前工作路径\n",
+    "os.name#当前操作系统名称"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3950de2a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\14690'"
+       "'c:\\\\Users\\\\14690\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313;c:\\\\Users\\\\14690\\\\AppData\\\\Roaming\\\\Python\\\\Python313\\\\Scripts;D:\\\\apache-tomcat-9.0.98 C:\\\\Program Files\\\\Java\\\\jdk1.8.0_151;C:\\\\Program Files\\\\MySQL\\\\MySQL Utilities 1.6\\\\;C:\\\\Program Files\\\\Git\\\\cmd;C:\\\\Users\\\\14690\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\Scripts\\\\;C:\\\\Users\\\\14690\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\;C:\\\\Users\\\\14690\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Launcher\\\\;C:\\\\Users\\\\14690\\\\AppData\\\\Local\\\\Microsoft\\\\WindowsApps;;C:\\\\Program Files\\\\JetBrains\\\\IntelliJ IDEA Community Edition 2024.3.1.1\\\\bin;;C:\\\\Users\\\\14690\\\\AppData\\\\Local\\\\Programs\\\\Microsoft VS Code\\\\bin;D:\\\\apache-tomcat-9.0.98 C:\\\\Program Files\\\\Java\\\\jdk1.8.0_151;C:\\\\Program Files\\\\MySQL\\\\MySQL Utilities 1.6\\\\;C:\\\\Program Files\\\\Git\\\\cmd;C:\\\\Users\\\\14690\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\Scripts\\\\;C:\\\\Users\\\\14690\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\;C:\\\\Users\\\\14690\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Launcher\\\\;C:\\\\Users\\\\14690\\\\AppData\\\\Local\\\\Microsoft\\\\WindowsApps;;C:\\\\Program Files\\\\JetBrains\\\\IntelliJ IDEA Community Edition 2024.3.1.1\\\\bin;;C:\\\\Users\\\\14690\\\\AppData\\\\Local\\\\Programs\\\\Microsoft VS Code\\\\bin'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import os\n",
-    "os.getcwd() #获取当前工作路径"
+    "os.environ.get('PATH')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
+   "id": "826cec5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d:\\\\CodingPanda\\\\Python\\\\ModuleLearning\\\\osLearning'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.abspath('.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "81dabb84",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileExistsError",
+     "evalue": "[WinError 183] 当文件已存在时，无法创建该文件。: 'd:\\\\CodingPanda\\\\Python\\\\ModuleLearning\\\\osLearning'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileExistsError\u001b[39m                           Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28mstr\u001b[39m=os.path.join(\u001b[33m'\u001b[39m\u001b[33md:\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[33mCodingPanda\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[33mPython\u001b[39m\u001b[33m'\u001b[39m,\u001b[33m'\u001b[39m\u001b[33mModuleLearning\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[33mosLearning\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mos\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmkdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mFileExistsError\u001b[39m: [WinError 183] 当文件已存在时，无法创建该文件。: 'd:\\\\CodingPanda\\\\Python\\\\ModuleLearning\\\\osLearning'"
+     ]
+    }
+   ],
+   "source": [
+    "str=os.path.join('d:\\\\CodingPanda\\\\Python','ModuleLearning\\\\osLearning')\n",
+    "os.mkdir(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "8a843c9f-aa12-4c0a-83fa-fe2d26288519",
    "metadata": {},
    "outputs": [
@@ -34,7 +101,7 @@
        "['git', 'Python']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.path.exists(path) #传入一个path路径，判断指定路径下的目录是否存在。存在返回True，否则返回False"
+    "os.path.exists(path) #传入一个path路径，判断指定路径下的目录是否存在。存在返回True，否则返回False\n"
    ]
   },
   {
@@ -200,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "68d663a8-61ed-4a1b-8a47-8f2e360cc70f",
    "metadata": {},
    "outputs": [
@@ -210,7 +277,7 @@
        "('D:\\\\CodingPanda\\\\mkdir\\\\mkdirs', 'hello.txt')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +298,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
